configuration for API
Allow access to fleet for osquery and orbit / fleetdm clients with minimal modifications required on hosts.

--- a/salt/nginx/etc/nginx.conf
+++ b/salt/nginx/etc/nginx.conf
@@ -60,6 +60,32 @@ http {
 		ssl_ciphers HIGH:!aNULL:!MD5;
 		ssl_prefer_server_ciphers on;
 
+		location /api/ {
+			#rewrite /fleet/api/?(.*)$ /$1 redirect;
+			rewrite ^/api/(.*)$ /fleet/api/$1 last;
+			{%- if role == 'fleet' %}
+			proxy_pass https://{{ main_ip }}:8080/fleet;
+#			grpc_pass  https://{{ main_ip }}:8080/fleet;
+			{%- else %}
+			proxy_pass  https://{{ manager_ip }}:8080/fleet;
+#			grpc_pass  grpcs://{{ manager_ip }}:8080/fleet;
+			{%- endif %}
+			grpc_set_header Host $host;
+			grpc_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_buffering off;
+		}
+		
+		location /fleet/api/ {
+			{%- if role == 'fleet' %}
+			grpc_pass  grpcs://{{ main_ip }}:8080;
+			{%- else %}
+			grpc_pass  grpcs://{{ manager_ip }}:8080;
+			{%- endif %}
+			grpc_set_header Host $host;
+			grpc_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_buffering off;
+		}
+
 		location ~ ^/kolide.agent.Api/(RequestEnrollment|RequestConfig|RequestQueries|PublishLogs|PublishResults|CheckHealth)$ {
 			{%- if role == 'fleet' %}
 			grpc_pass  grpcs://{{ main_ip }}:8080;
